# dockteur

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  configure.sh  docker-bake.hcl  docker-compose.yml  mise.toml  renovate.json  test.dockerfile
.github/workflows/: build.yml  release.yml
.mise/tasks/: build
src/: configuration.rs  configuration_fixtures.rs  configuration_test.rs  health_checker.rs  health_checker_configuration_test.rs  health_checker_string_test.rs  health_checker_test.rs  main.rs  redis_health_checker_test.rs  system.rs  system_test.rs  test_logger.rs  test_macros.rs  ui.rs  ui_test.rs
src/health_checker/: http.rs  http_health_checker.rs  http_health_checker_test.rs  http_test.rs  redis.rs  redis_health_checker.rs  redis_health_checker_test.rs  redis_test.rs  test_fixtures.rs  toxiproxy.rs  whoami.rs
stub/: healthy.json  slow.json  unhealthy.json
