[package]
name = "dockteur"
version = "0.0.0"
edition = "2021"

[dependencies]
env_logger = { version = "^0.11.0", default-features = false }
log = "^0.4.0"
ureq = { version = "^3.0.0", default-features = false }
url = "2.5.2"

[dev-dependencies]
assert2 = "0.3.15"
ctor = "0.2.7"
http = "1.1.0"
rand = "0.9.0"
rstest = "0.24.0"
tokio = { version = "1.40.0", features = ["macros"] }
wiremock = "0.6.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
