[package]
name = "dockteur"
version = "0.0.0"
edition = "2021"

[dependencies]
env_logger = { version = "^0.11.0", default-features = false }
log = "^0.4.0"
url = "2.5.2"
reqwest = { version = "0.13.0", default-features = false }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
http = "1.1.0"

[dev-dependencies]
assert2 = "0.3.15"
ctor = "0.6.0"
rand = "0.10.0"
reqwest = { version = "0.13.0", default-features = false, features = ["json"] }
rstest = "0.26.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
testcontainers-modules = { version = "0.11.6", default-features = false, features = ["redis"] }
wiremock = "0.6.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
